php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22191 compile fails with frontbase support in 4.3.0
Submitted: 2003-02-12 12:19 UTC Modified: 2003-02-12 14:46 UTC
From: giov at cidoc dot iuav dot it Assigned:
Status: Closed Package: FrontBase related
PHP Version: 4.3.0 OS: red hat linux
Private report: No CVE-ID: None
 [2003-02-12 12:19 UTC] giov at cidoc dot iuav dot it
After successfully configuring with

./configure --with-apxs=/usr/local/apache/bin/apxs -with-config-file-path=/usr/local/apache --with-fbsql

Compilation fails with following messages. Note that this only happens with 4.3.0; with 4.2.3 it works normally.

/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c: In function
`phpfbColumnAsString':
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2279: `FB_TinyInteger' undeclared
(first use in this function)
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2279: (Each undeclared identifier
is reported only once
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2279: for each function it
appears in.)
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2288: `FB_LongInteger' undeclared
(first use in this function)
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2290: `FBLongInteger' undeclared
(first use in this function)
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2290: parse error before `v'
/root/giov/php-4.3.0/ext/fbsql/php_fbsql.c:2295: `v' undeclared (first use
in this function)
make: *** [ext/fbsql/php_fbsql.lo] Error 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-02-12 12:37 UTC] iliaa@php.net
Which version of frontbase are you using?
 [2003-02-12 14:46 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 20:00:01 2026 UTC