Fixed bug #22191 (frontbase build was broken for people using older versions).